# FurEmotion-AI

./: .gitignore  0.5  README.md  pyproject.toml  trans_data.ipynb  trans_data_preview.ipynb  wav_to_image.ipynb
model/: WaveNetClassifier.py  ast.ipynb  crnn.ipynb  lstm.ipynb  new_crnn.ipynb  resnet.ipynb  wavenet.ipynb  wavenet_classifier_training_history.csv
save_similarity/: brushing_similarity.txt  food_similarity.txt  hostile_similarity.txt  isolation_similarity.txt  relax_similarity.txt  whining_similarity.txt
