[tool.poetry]
name = "furemotion-ai"
version = "0.1.0"
description = ""
authors = ["jaewonE <importjaewonE@gmail.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
keras = "2.15.0"
tensorflow = "2.15.1"
numpy = "1.26.4"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.2"
sox = "^1.5.0"
tqdm = "^4.66.6"
pandas = "^2.2.3"
noisereduce = "^3.0.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
